# hermes

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs  replay.rs
crates/hermes-cli/: Cargo.toml
crates/hermes-cli/src/: main.rs
crates/hermes-proxy/: Cargo.toml
crates/hermes-scripts/: Cargo.toml
crates/hermes-store/: Cargo.toml
crates/hermes-tui/: Cargo.toml
proxy/: Cargo.toml
proxy/src/: http.rs  lib.rs  proxy.rs
scripts/: Cargo.toml
scripts/examples/: *api.github.com*.rhai  *httpbin.org-status*.rhai
scripts/src/: action.rs  engine.rs  error.rs  lib.rs
store/: Cargo.toml
store/src/: db.rs  error.rs  lib.rs  transaction.rs
tui/: Cargo.toml
tui/src/: app.rs  event.rs  lib.rs  render.rs  runner.rs
