[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
proxy   = { path = "../proxy" }
store   = { path = "../store" }
tui     = { path = "../tui" }
scripts = { path = "../scripts" }
tokio   = { version = "1", features = ["full"] }
clap    = { version = "4", features = ["derive"] }
uuid    = { version = "1", features = ["v4"] }
rustls        = "0.23"
tokio-rustls  = "0.26"
webpki-roots  = "0.26"
libc          = "0.2"
