[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
store   = { path = "../store" }
scripts = { path = "../scripts" }
tokio = { version = "1", features = ["full"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "0.26"
rustls-pemfile = "2"
